--- a/style.css
+++ b/style.css
@@ -46,3 +46,13 @@ h1 {
     width: 100%;
     margin-top: 5px;
 }
+
+/* Media query Large Smartphone */
+@media screen and (max-width: 600px) {
+    h1{
+       font-size: 19px;
+    }
+    .image-container {
+        margin: 10px;
+    }
+}
